@@ -4,6 +4,8 @@
     <groupId>it1901</groupId>
     <artifactId>core</artifactId>
 
+
+
     <parent>
         <groupId>it1901</groupId>
         <artifactId>movielist</artifactId>
@@ -46,7 +48,7 @@
         		<artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                    @{jaCoCoArgLine} --add-opens ui/ui=ALL-UNNAMED
+                    @{jaCoCoArgLine} --add-opens core/core=ALL-UNNAMED --add-opens core/core=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                     </argLine>
                 </configuration>
 	        </plugin>
@@ -62,7 +64,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Checkstyle Plugin
+            <!-- Checkstyle Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -72,7 +74,7 @@
                         <id>validate</id>
                         <phase>package</phase>
                         <configuration>
-                            <configLocation>../checkstyle.xml</configLocation>
+                            <!-- <configLocation>checkstyle.xml</configLocation> -->
                             <redirectXRefResults>true</redirectXRefResults>
                             <outputFile>checkstyle-results.txt</outputFile>
                             <excludes>**/module-info.java</excludes>
@@ -83,7 +85,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin> -->
+            </plugin> 
 
             <!-- SpotBugs Plugin -->
             <plugin>
